--- a/VisualStudio/Sia-GPU-Miner.vcxproj
+++ b/VisualStudio/Sia-GPU-Miner.vcxproj
@@ -171,13 +171,13 @@
     </Link>
     <CudaCompile>
       <CudaRuntime>Static</CudaRuntime>
-      <CodeGeneration>compute_30,sm_30;compute_32,sm_32;compute_35,sm_35;compute_50,sm_50;compute_52,sm_52</CodeGeneration>
-      <Optimization>O2</Optimization>
+      <CodeGeneration>compute_30,sm_30;compute_32,sm_32;compute_35,sm_35;compute_50,sm_50;compute_52,sm_52;compute_52,compute_52</CodeGeneration>
+      <Optimization>O3</Optimization>
       <PtxAsOptionV>true</PtxAsOptionV>
     </CudaCompile>
     <CudaLink>
       <PerformDeviceLink>false</PerformDeviceLink>
-      <Optimization>O2</Optimization>
+      <Optimization>O3</Optimization>
     </CudaLink>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -205,13 +205,13 @@
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <CudaRuntime>Static</CudaRuntime>
-      <CodeGeneration>compute_30,sm_30;compute_32,sm_32;compute_35,sm_35;compute_50,sm_50;compute_52,sm_52</CodeGeneration>
-      <Optimization>O2</Optimization>
+      <CodeGeneration>compute_30,sm_30;compute_32,sm_32;compute_35,sm_35;compute_50,sm_50;compute_52,sm_52;compute_52,compute_52</CodeGeneration>
+      <Optimization>O3</Optimization>
       <PtxAsOptionV>true</PtxAsOptionV>
     </CudaCompile>
     <CudaLink>
       <PerformDeviceLink>false</PerformDeviceLink>
-      <Optimization>O2</Optimization>
+      <Optimization>O3</Optimization>
     </CudaLink>
   </ItemDefinitionGroup>
   <ItemGroup>
