return more than 1 nonce per kernel call

--- a/VisualStudio/Sia-GPU-Miner.vcxproj
+++ b/VisualStudio/Sia-GPU-Miner.vcxproj
@@ -225,6 +225,7 @@
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\gpu-cuda-miner.h" />
     <ClInclude Include="..\network.h" />
     <ClInclude Include="getopt\getopt.h" />
   </ItemGroup>
